improve search panel

--- a/staff/jaume-villarreal/initial-app/index.html
+++ b/staff/jaume-villarreal/initial-app/index.html
@@ -61,14 +61,13 @@
                 <a class="btn btn--back" href="">Back</a>
             </section>
             
-            <section class="panel _panel--hide home">
+            <section class="panel panel--hide home">
                 <h2 class="header-2">Welcome!</h2>
-                <section class="panel panel__gallery">
+                <section class="panel">
                     <form class="panel--show form form__search">
                         <input type="text" id="query">
                         <button type="submit" class="btn btn--query">Search</button>
                     </form>
-                    <div class="gallery"></div>
                 </section>
                 <a class="btn" href="">Logout</a>
             </section>
