--- a/staff/juan-bovo/mucho-layout/index.html
+++ b/staff/juan-bovo/mucho-layout/index.html
@@ -11,8 +11,8 @@
 <body class="website-layout">
     <header>
         <div class="header-separator">
-        <h1 class="main-title header-title">Mucho</h1>
-        <p class="header-paragraph list-item--color">We are a strategy, branding, packaging, and graphic design
+        <h1 class="header-separator__title header-title">Mucho</h1>
+        <p class="header-separator__paragraph list-item--color">We are a strategy, branding, packaging, and graphic design
             studio. We create design with meaning from our locations
             in Barcelona, Paris, San Francisco, New York and Sydney.</p>
         <nav class="navigation-panel">
@@ -28,9 +28,9 @@
             </ul>
         </nav>
         </div>
-        <div class="navigators">
+        <div class="sections-navigator">
         <section class="navigation">
-        <h3 class="navigation-title list-item--color">All Services &rsaquo;</h3>
+        <h3 class="navigation__title list-item--color">All Services &rsaquo;</h3>
         <ul class="dropdown-menu">
             <li><a href="#" class="dropdown-menu__item">Item...</a></li>
             <li><a href="#" class="dropdown-menu__item">Item...</a></li>
@@ -49,7 +49,7 @@
         </ul>
         </section>
         <section class="navigation">
-        <h3 class="navigation-title list-item--color">All Industries &rsaquo;</h3>
+        <h3 class="navigation__title list-item--color">All Industries &rsaquo;</h3>
         <ul class="dropdown-menu">
             <li><a href="#"  class="dropdown-menu__item">Item...</a></li>
             <li><a href="#"  class="dropdown-menu__item">Item...</a></li>
@@ -73,116 +73,116 @@
         </div>
     </header>
     <main class="mosaic-grid">
-        <div class="project-div">
+        <div class="mosaic-grid__container">
             <div><a href="#"><img src="http://placeimg.com/640/480/animals?t=1562877254013" alt=""></a></div>
             <h3 class="project-title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
         </div>
-        <div class="project-div">
+        <div class="mosaic-grid__container">
             <div><a href="#"><img src="http://placeimg.com/640/480/arch?t=1562877254013" alt=""></a></div>
             <h3 class="project-title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
         </div>
-        <div class="project-div">
+        <div class="mosaic-grid__container">
             <div><a href="#"><img src="http://placeimg.com/640/480/nature?t=1562877254013" alt=""></a></div>
             <h3 class="project-title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
         </div>
-        <div id="big1" class="project-div project-div__big">
+        <div class="mosaic-grid__container mosaic-grid__container--big1">
             <div><a href="#"><img src="http://placeimg.com/640/480/people?t=1562877254013" alt=""></a></div>
             <h3 class="project-title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
         </div>
-        <div class="project-div">
+        <div class="mosaic-grid__container">
             <div><a href="#"><img src="http://placeimg.com/640/480/tech?t=1562877254013" alt=""></a></div>
             <h3 class="project-title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
         </div>
-        <div class="project-div">
+        <div class="mosaic-grid__container">
             <div><a href="#"><img src="http://placeimg.com/640/480/grayscale?t=1562877254013" alt=""></a></div>
             <h3 class="project-title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
         </div>
-        <div id="big2" class="project-div project-div__big">
+        <div class="mosaic-grid__container mosaic-grid__container--big2">
             <div><a href="#"><img src="http://placeimg.com/640/480/sepia?t=1562877254013" alt=""></a></div>
             <h3 class="project-title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
         </div>
-        <div class="project-div">
+        <div class="mosaic-grid__container">
             <div><a href="#"><img src="http://placeimg.com/640/480/animals?t=1562877254013" alt=""></a></div>
             <h3 class="project-title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
         </div>
-        <div class="project-div">
+        <div class="mosaic-grid__container">
             <div><a href="#"><img src="http://placeimg.com/640/480/arch?t=1562877254013" alt=""></a></div>
             <h3 class="project-title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
         </div>
-        <div id="big3" class="project-div project-div__big">
+        <div class="mosaic-grid__container mosaic-grid__container--big3">
             <div><a href="#"><img src="http://placeimg.com/640/480/nature?t=1562877254013" alt=""></a></div>
             <h3 class="project-title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
         </div>
         </div>
-        <div class="project-div">
+        <div class="mosaic-grid__container">
             <div><a href="#"><img src="http://placeimg.com/640/480/people?t=1562877254013" alt=""></a></div>
             <h3 class="project-title">Project</h2>
             <p>Project's designer-like pretentious description.</p>
         </div>
-        <div class="project-div">
+        <div class="mosaic-grid__container">
             <div><a href="#"><img src="http://placeimg.com/640/480/tech?t=1562877254013" alt=""></a></div>
             <h3 class="project-title">Project</h3>
             <p>Project's designer-like pretentious description.</p>
         </div>
     </main>
     <section class="about-section">
-        <div class="project-div project-description">
+        <div class="mosaic-grid__container project-description">
             <h3 class="project-title header-title">Project</h3>
             <p>What does brand strategy mean to you? How do powerful ideas become into powerful meaning? See our approach here:… t.co/dcF3a5b708</p>
         </div>
-        <div class="project-div project-description">
+        <div class="mosaic-grid__container project-description">
             <h3 class="project-title header-title">Project</h3>
             <p>PostGráfica is a masters course developed by Mucho on Strategic Thinking, Graphic Design and Creative Business. For more info: postgrafica.idepbarcelona.com</p>
         </div>
-        <div class="project-div project-description">
+        <div class="mosaic-grid__container project-description">
             <h3 class="project-title header-title">Project</h3>
             <p>We create design with meaning. Great design speaks to your head, and your heart. It makes you feel different, and think differently.</p>
         </div>
     </section>
     <footer class="footer">
-        <div class="approach-paragraph">
+        <div class="footer__approach-paragraph">
         <p>We look forward to hearing from you.</p>
         <p>For new business, please contact the closest office directly.</p>
         <p>For general enquiries, please email us: <a href="#">info@wearemucho.com</a></p>
         </div>
         <div class="addresses-wrapper">
-            <div class="address-location">
+            <div class="addresses-wrapper__location">
             <h5 class="header-title">Barcelona</h5>
-            <p class="contact-data">+34 93 481 40 89<br>
+            <p class="addresses-wrapper__contact-data">+34 93 481 40 89<br>
             barcelona@wearemucho.com<br>
             <br>
             Morales, 27K<br>
             08029 Barcelona<br></p>
             </div>
-            <div class="address-location">
+            <div class="addresses-wrapper__location">
             <h5 class="header-title">San Francisco</h5>
-            <p class="contact-data">+1 415 546 1399<br>
+            <p class="addresses-wrapper__contact-data">+1 415 546 1399<br>
             sanfrancisco@wearemucho.com<br>
             <br>
             466 Geary Street, Suite 500<br>
             San Francisco, CA 94102</p>
             </div>
-            <div class="address-location">
+            <div class="addresses-wrapper__location">
             <h5 class="header-title">Paris</h5>
-            <p class="contact-data">+34 93 481 40 89<br>
+            <p class="addresses-wrapper__contact-data">+34 93 481 40 89<br>
             paris@wearemucho.com<br>
             <br>
             80 rue Taitbout<br>
             75009 Paris<br></p>
             </div>
-            <div class="address-location">
+            <div class="addresses-wrapper__location">
             <h5 class="header-title">New York</h5>
-            <p class="contact-data">+34 93 481 40 89<br>
+            <p class="addresses-wrapper__contact-data">+34 93 481 40 89<br>
             newyork@wearemucho.com<br>
             <br>
             37 Greenpoint Ave, Suite 219<br>
@@ -190,10 +190,10 @@
             </div>
         </div>
         <div class="contact-wrapper">
-        <div class="social-media list-item--color">
+        <div class="contact-wrapper__social-media list-item--color">
             <p>Copyright © 2019</p>
         </div>
-        <div class="social-media list-item--color">
+        <div class="contact-wrapper__social-media list-item--color">
             <ul>
             <i class="fab fa-instagram"></i>
             <i class="fab fa-facebook-square"></i>
