--- a/staff/jaume-villarreal/initial-app/index.html
+++ b/staff/jaume-villarreal/initial-app/index.html
@@ -61,15 +61,16 @@
                 <a class="btn btn--back" href="">Back</a>
             </section>
             
-            <section class="panel panel--hide home">
+            <section class="panel _panel--hide home">
                 <h2 class="header-2">Welcome!</h2>
+                <a class="btn" href="">Logout</a>
                 <section class="panel">
                     <form class="panel--show form form__search">
                         <input type="text" id="query">
                         <button type="submit" class="btn btn--query">Search</button>
                     </form>
+                    <ul class="gallery"></ul>
                 </section>
-                <a class="btn" href="">Logout</a>
             </section>
         </main>
 
