upgrade pato de fondo y botones de colores con flex wrap de distri de fotos

--- a/staff/adria-arquimbau/initial-app/5 trencat/index.html
+++ b/staff/adria-arquimbau/initial-app/5 trencat/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <main>
-        <h1>Initialasdad App</h1>
+        <h1>Initial App</h1>
 
         <!-- initial panel -->
         <section class="panel panel--show">
@@ -55,19 +55,18 @@
 
         
         <!-- welcome panel -->
-        <section class="panel panel--show">
+        <section class="panel panel--hide">
             <h2>Welcome!</h2>
             <form>
                     <input type="text" id="ducks" placeholder="SearchDucks">
                     <button class="panel__button" type="submit">Search</button>
                 </form>
-            <ul class="outputduck"></ul>
-            <!-- <a class="panel__button" href="">logout</a> -->
+            <ul class="outputduck duckstyles"></ul>
+            <a class="panel__button" href="">logout</a>
         </section>
 
 
     </main>
-
 
     <script src="curray.js"></script>
     <script src="data.js"></script>
