upgrade pato final amb colocacio flex bebe

--- a/staff/adria-arquimbau/initial-app/5/index.html
+++ b/staff/adria-arquimbau/initial-app/5/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <main>
-        <h1>Initialasdad App</h1>
+        <h1>Initial App</h1>
 
         <!-- initial panel -->
         <section class="panel panel--show">
