add components custom

--- a/staff/jaume-villarreal/initial-app/index.html
+++ b/staff/jaume-villarreal/initial-app/index.html
@@ -78,6 +78,7 @@
                         <button type="submit" class="btn btn--query">Search</button>
                         <p class="panel__feedback panel--hide"></p>
                     </form>
+                    <!-- Gallery -->
                     <ul class="gallery"></ul>
                 </section>
             </section>
