update initial app

--- a/staff/manuel-barzi/initial-app/6/index.html
+++ b/staff/manuel-barzi/initial-app/6/index.html
@@ -54,7 +54,7 @@
         </section>
 
         <!-- Home -->
-        <section class="panel _hide">
+        <section class="panel hide">
             <h2>Welcome!</h2>
             <button>Logout</button>
 
