--- a/staff/carolina-zhou/initial-app/index.html
+++ b/staff/carolina-zhou/initial-app/index.html
@@ -12,13 +12,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-  <header class="header">
+<body class="body">
+  <header class="body__header">
     <p>Initial-App a.k.a Useless-App</p>
   </header>
 
-  <main>
-    <!-- initial panel -->
+  <main class="body__main">
+    <!-- Initial -->
     <section class="panel panel--show">
       <div class="intro">
         <h1 class="intro__title">Hello!</h1>
@@ -26,7 +26,7 @@
       </div>
     </section>
 
-    <!-- register process panel -->
+    <!-- Register Process -->
     <section class="panel panel--hide">
       <div  class="register">
         <form>
@@ -52,11 +52,12 @@
                 </li>                
             </ul>
         </form>
+        <!-- <p class="register__feedback feedback feedback--error">A message.</p> -->
         <a class="register__back" href="">go back</a>
       </div>
     </section>
 
-    <!-- register success panel -->
+    <!-- Register Success -->
     <section class="panel panel--hide">
         <div class="confirmation">
             <p>The registration was successful! Enter password to login.</p>
@@ -66,11 +67,12 @@
 
                 <button class="confirmation__button" type="submit" value="submit">Login</button>
             </form>
+            <!-- <p class="confirmation__feedback feedback feedback--error">A message.</p> -->
         </div>
       </div>
     </section>
 
-    <!-- login panel -->
+    <!-- Login -->
     <section class="panel panel--hide">
       <div class="login">
         <form>
@@ -88,28 +90,41 @@
                 </li>                
             </ul>
         </form>
+        <!-- <p class="login__feedback feedback feedback--error">A message.</p> -->
         <a class="login__back" href="">go back</a>
       </div>
     </section>
 
-    <!-- welcome panel -->
+    <!-- Home -->
     <section class="panel panel--hide">
       <div class="home">
         <h1>Welcome!</h1>
-        <a class="home__logout" href="">Log out</a>
+        <form class="home__form">
+          <label class="home__label" for="search">Search</label>
+          <input class="home__input" id="search" name="search" type="text" placeholder="Search..." >
+          <button class="home__button" type="submit" value="submit">Search!</button>
+        </form>
+        <buttton class="home__logout">Log out</button>
       </div>
     </section>
 
-    <!-- error panel -->
+    <!-- Error -->
     <section class="panel panel--hide">
         <div class="error">
           <p class="error__title">Error</p>
           <p class="error__message"></p>
         </div>
-    </section>    
+    </section> 
+    
+    <!-- Search -->
+    <section class="panel panel--hide">
+      <div class="search">
+        <ul class="search__duck"></ul>
+      </div>
+    </section>  
   </main>
 
-  <footer class="footer">
+  <footer class="body__footer">
     <p>Skylab Coders Academy ❤ Carolina Zhou Lin</p>
   </footer>
 
