add new custom components: DuckHome, Ducks and DucksDetails

--- a/staff/jaume-villarreal/initial-app/index.html
+++ b/staff/jaume-villarreal/initial-app/index.html
@@ -70,6 +70,7 @@
             <section class="panel _panel--hide home">
                 <h2 class="header-2">Welcome!</h2>
                 <a class="btn" href="">Logout</a>
+
                 <!-- Search -->
                 <section class="panel">
                     <h3>Search your duck</h3>
@@ -78,14 +79,21 @@
                         <button type="submit" class="btn btn--query">Search</button>
                         <p class="panel__feedback panel--hide"></p>
                     </form>
-                    <!-- Gallery -->
-                    <ul class="gallery"></ul>
                 </section>
+
+                    <!-- Gallery -->
+                <section>
+                    <ul class="panel _gallery"></ul>
+                </section>
+
+                <!-- Duck Detail -->
+                <section class="panel"></section>
             </section>
         </main>
 
         <script src="js/curray.js"></script>
         <script src="js/components.js"></script>
+        <script src="js/components-custom.js"></script>
         <script src="js/data.js"></script>
         <script src="js/logic.js"></script>
         <script src="js/presentation.js"></script>
