add sass version

--- a/staff/sylvain-legrill/mucho-layout/all/index.html
+++ b/staff/sylvain-legrill/mucho-layout/all/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>mucho-layout</title>
-    <link rel='stylesheet' href='style.css'>
+    <link rel='stylesheet' href='output.css'>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/0ebe3f9bf2.js"></script>
 </head>
@@ -28,24 +28,24 @@
 
         <nav class = "header__navigator">
             <ul class= "header__navigator--menulist">
-                <li>
+                <li class= menulist__li>
                     Work
                 </li>
-                <li>
+                <li class= menulist__li>
                     Strategy
                 </li>
-                <li>
+                <li class= menulist__li>
                     Sharing
-                <li>
+                <li class= menulist__li> 
                     About
                 </li>
-                <li>
+                <li class= menulist__li>
                     Jobs
                 </li>
-                <li>
+                <li class= menulist__li>
                     Shop
                 </li>
-                <li>
+                <li class= menulist__li>
                     Contact</a>
                 </li>
             </ul>
@@ -71,24 +71,24 @@
         <main class = "main">
 
             <div class='main__imagecontainer'>
-                    <img src="https://images.unsplash.com/photo-1558981130-93d25a4d4212?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgA">
-                    <img src="https://images.unsplash.com/photo-1558981130-93d25a4d4212?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgB">
-                    <img src="https://images.unsplash.com/photo-1558981130-93d25a4d4212?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgC">
-                    <img src="https://images.unsplash.com/photo-1558981130-93d25a4d4212?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgD">
-                    <img src="https://images.unsplash.com/photo-1558981130-93d25a4d4212?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgE">
-                    <img src="https://images.unsplash.com/photo-1558981130-93d25a4d4212?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgF">
-                    <img src="https://images.unsplash.com/photo-1558981130-93d25a4d4212?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgG">
-                    <img src="https://images.unsplash.com/photo-1558981130-93d25a4d4212?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgH">
-                    <img src="https://images.unsplash.com/photo-1558981130-93d25a4d4212?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgI">
-                    <img src="https://images.unsplash.com/photo-1558981130-93d25a4d4212?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgJ">
+                    <img src="https://images.unsplash.com/photo-1484697649419-083050206082?ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgA">
+                    <img src="https://images.unsplash.com/photo-1484505613578-ca6e53940db1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgB">
+                    <img src="https://images.unsplash.com/photo-1525994886773-080587e161c2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgC">
+                    <img src="https://images.unsplash.com/photo-1533477590952-1abe5a706b61?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgD">
+                    <img src="https://images.unsplash.com/photo-1484972759836-b93f9ef2b293?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgE">
+                    <img src="https://images.unsplash.com/photo-1560110734-f03640ca8eda?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgF">
+                    <img src="https://images.unsplash.com/photo-1532019831386-8df1917e15d0?ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgG">
+                    <img src="https://images.unsplash.com/photo-1511577662252-f996e748ab92?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgH">
+                    <img src="https://images.unsplash.com/photo-1514510316197-ac2d9e62319a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgI">
+                    <img src="https://images.unsplash.com/photo-1544535753-8dbc41b0f19c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgJ">
                     <img src="https://images.unsplash.com/photo-1558981130-93d25a4d4212?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgK">
-                    <img src="https://images.unsplash.com/photo-1558981130-93d25a4d4212?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgL">
-                    <img src="https://images.unsplash.com/photo-1558981130-93d25a4d4212?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgM">
-                    <img src="https://images.unsplash.com/photo-1558981130-93d25a4d4212?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgN">
-                    <img src="https://images.unsplash.com/photo-1558981130-93d25a4d4212?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgO">
-                    <img src="https://images.unsplash.com/photo-1558981130-93d25a4d4212?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgP">
-                    <img src="https://images.unsplash.com/photo-1558981130-93d25a4d4212?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgQ">
-                    <img src="https://images.unsplash.com/photo-1558981130-93d25a4d4212?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgR">
+                    <img src="https://images.unsplash.com/photo-1560110624-75d6a1d0eb17?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgL">
+                    <img src="https://images.unsplash.com/photo-1506623423015-9cb8fe1329ad?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgM">
+                    <img src="https://images.unsplash.com/photo-1489582636924-5b46e9fa372c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgN">
+                    <img src="https://images.unsplash.com/photo-1536693347246-1d52b9b7aa10?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgO">
+                    <img src="https://images.unsplash.com/photo-1558476647-72e466bb5873?ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgP">
+                    <img src="https://images.unsplash.com/photo-1470405317902-f80e1a701ad5?ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgQ">
+                    <img src="https://images.unsplash.com/photo-1475815422771-2f3e677b170b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="#" class="main__imagecontainer--imgR">
             </div>
             <div class = "main__mainarticles">
                     <article class = "main__mainarticles--wearemucho">
@@ -122,7 +122,7 @@
         <footer>
             <div class = "footer">
                 <section class = 'footer__contact'>
-                    <p>
+                    <p class = 'footer__contact--p'>
                         We look forward to hearing from you. For new business, please contact the closest office directly. For general enquiries, please email us: info@wearemucho.com
                     </p>
                 </section>
@@ -160,12 +160,10 @@
                 <div class="footer__copyrightsuscribe">
                         <div class="footer__copyrightsuscribe--subscribe">
                         <h4>Subscribe</h4>
-
-                                <i  class="fab fa-instagram"></i>
+                                <i  class="fab fa-twitter "></i>
                                 <i  class="fab fa-facebook"></i>
+                                <i  class="fab fa-instagram"></i>
                                 <i  class="fab fa-linkedin"></i>
-                                <i  class="fab fa-twitter "></i> 
-                                
                         </div>
                         <div class= "footer__copyrightsuscribe--copyright">
                         <h4>Copyright © 2019 Terms</h4>
@@ -177,3 +175,4 @@
 
 </body>
 </html>
+
