--- a/staff/adria-arquimbau/initial-app/7/index.html
+++ b/staff/adria-arquimbau/initial-app/7/index.html
@@ -31,7 +31,7 @@
                 <input type="password" id="password">
                 <button type="submit">Register</button>
             </form>
-            <p class="panel__feedback feedback feedback--error">A message.</p>
+            <p class="panel__feedback feedback feedback--error"></p>
             <a href="">back</a>
         </section>
 
@@ -49,7 +49,7 @@
                 <input type="password" id="password">
                 <button type="submit">Login</button>
             </form>
-            <p class="panel__feedback feedback feedback--error">A message.</p>
+            <p class="panel__feedback feedback feedback--error"></p>
             <a href="">back</a>
         </section>
 
@@ -65,21 +65,17 @@
                     <input type="text" name="query">
                     <button>Search</button>
                 </form>
-                <p class="panel__feedback feedback feedback--error">A message.</p>
+                <p class="panel__feedback feedback feedback--error"></p>
             </section>
 
             <!-- Results -->
             <section class="panel">
-                <ul>
-                    <li>Duck 1</li>
-                    <li>Duck 2</li>
-                    <li>Duck 3</li>
-                </ul>
+                <ul></ul>
             </section>
 
             <!-- Detail -->
             <section class="panel">
-                <!-- TODO all duck info -->
+                <ul></ul>
             </section>
         </section>
     </main>
