add call.js && modify logic.js && add DuckDetail in components-custom

--- a/staff/jaume-villarreal/initial-app/index.html
+++ b/staff/jaume-villarreal/initial-app/index.html
@@ -87,13 +87,20 @@
                 </section>
 
                 <!-- Duck Detail -->
-                <section class="panel"></section>
+                <section class="panel">
+                    <h3>Title</h3>
+                    <img src="whatever.jpg" alt="duck image">
+                    <span>price</span>
+                    <p>description</p>
+                    <a href="#">duck link</a>
+                </section>
             </section>
         </main>
 
         <script src="js/curray.js"></script>
         <script src="js/components.js"></script>
         <script src="js/components-custom.js"></script>
+        <script src="js/call.js"></script>
         <script src="js/data.js"></script>
         <script src="js/logic.js"></script>
         <script src="js/presentation.js"></script>
