update initial-app files directories

--- a/staff/jaume-villarreal/initial-app/index.html
+++ b/staff/jaume-villarreal/initial-app/index.html
@@ -72,7 +72,7 @@
                 <a class="btn" href="">Logout</a>
 
                 <!-- Search -->
-                <section class="panel">
+                <section class="panel panel--show">
                     <h3>Search your duck</h3>
                     <form class="panel--show form form__search">
                         <input type="text" id="query">
@@ -82,17 +82,18 @@
                 </section>
 
                     <!-- Gallery -->
-                <section>
+                <section class="panel panel--hide">
                     <ul class="panel _gallery"></ul>
                 </section>
 
                 <!-- Duck Detail -->
-                <section class="panel">
+                <section class="panel panel--hide">
                     <h3>Title</h3>
                     <img src="whatever.jpg" alt="duck image">
                     <span>price</span>
                     <p>description</p>
                     <a href="#">duck link</a>
+                    <a class="btn" href="">Back</a>
                 </section>
             </section>
         </main>
