--- a/staff/jaume-villarreal/initial-app/SpecRunner.html
+++ b/staff/jaume-villarreal/initial-app/SpecRunner.html
@@ -12,12 +12,13 @@
   <script src="vendor/jasmine/jasmine-3.4.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="../js/curray.js"></script>
-  <script src="../js/data.js"></script>
-  <script src="../js/logic.js"></script>
+  <script src="utils/call.js"></script>
+  <script src="utils/curray.js"></script>
+  <script src="data/index.js"></script>
+  <script src="logic/index.js"></script>
 
   <!-- include spec files here... -->
-  <script src="logic.spec.js"></script>
+  <script src="logic/index.spec.js"></script>
 </head>
 
 <body>
