--- a/staff/adria-arquimbau/initial-app/9/index.html
+++ b/staff/adria-arquimbau/initial-app/9/index.html
@@ -14,12 +14,12 @@
         <h1>Initial App</h1>
 
         <!-- Landing -->
-        <section class="panel show">
+        <section class="landing show">
             <a href="">Register</a> or <a href="">Login</a>.
         </section>
 
         <!-- Register -->
-        <section class="panel hide">
+        <section class="register hide">
             <form>
                 <label for="name">Name</label>
                 <input type="text" id="name">
@@ -36,12 +36,12 @@
         </section>
 
         <!-- Register Success -->
-        <section class="panel hide">
+        <section class="register-success hide">
             Ok, registered succeeded, you can now proceed to <a href="">login</a>.
         </section>
 
         <!-- Login -->
-        <section class="panel hide">
+        <section class="login hide">
             <form>
                 <label for="email">E-mail</label>
                 <input type="email" id="email">
@@ -54,22 +54,22 @@
         </section>
 
         <!-- Home -->
-        <section class="panel _hide">
+        <section class="duck-home hide">
             <h2>Welcome!</h2>
             <button>Logout</button>
 
             <!-- Search -->
-            <section class="panel">
+            <section class="search">
                 <h3>Search</h3>
                 <form>
                     <input type="text" name="query">
                     <button>Search</button>
                 </form>
-                <p class="panel__feedback feedback feedback--error">A message.</p>
+                <p class="panel__feedback feedback feedback--error hide">A message.</p>
             </section>
 
             <!-- Results -->
-            <section class="panel">
+            <section class="duck-results hide">
                 <ul>
                     <li>Duck 1</li>
                     <li>Duck 2</li>
@@ -78,10 +78,10 @@
             </section>
 
             <!-- Detail -->
-            <section class="panel hide">
+            <section class="duck-detail hide">
                 <h3>Title</h3>
-                <img src="http://whetever.com/image.jpg">
-                <span>Price</span>
+                <img class="duck-detail__photo" src="http://whetever.com/image.jpg">
+                <span class="duck-detail__price">Price</span>
                 <p>Description</p>
                 <a href="">Link</a>
             </section>
@@ -90,30 +90,21 @@
 
     <script src="utils/call.js"></script>
     <script src="utils/curray.js"></script>
-
     <script src="data/index.js"></script>
-
-    <script src="index.html"></script>
-    <script src="index.js"></script>
-
-    <script src="components/custom/duck-detail.js"></script>
+    <script src="logic/index.js"></script>
+    <script src="components/component.js"></script>
+    <script src="components/landing.js"></script>
+    <script src="components/submit-back.js"></script>
+    <script src="components/register.js"></script>
+    <script src="components/register-success.js"></script>
+    <script src="components/login.js"></script>
+    <script src="components/feedback.js"></script>
+    <script src="components/search.js"></script>
+    <script src="components/results.js"></script>
     <script src="components/custom/duck-home.js"></script>
     <script src="components/custom/duck-results.js"></script>
-
-    <script src="components/component.js"></script>
-    <script src="components/feedback.js"></script>
-    <script src="components/index.sass"></script>
-    <script src="components/landing.js"></script>
-    <script src="components/login.js"></script>
-    <script src="components/register-success.js"></script>
-    <script src="components/register.js"></script>
-    <script src="components/results.js"></script>
-    <script src="components/search.js"></script>
-    <script src="components/submit-back.js"></script>
-
-    <script src="logic/index.js"></script>
-    <script src="logic/index.spec.js"></script>
-
+    <script src="components/custom/duck-detail.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
