--- a/staff/carolina-zhou/initial-app/SpecRunner.html
+++ b/staff/carolina-zhou/initial-app/SpecRunner.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,12 +13,13 @@
   <script src="vendor/jasmine/jasmine-3.4.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="curray.js"></script>
-  <script src="data.js"></script>
-  <script src="logic.js"></script>
+  <script src="utils/call.js"></script>
+  <script src="utils/curray.js"></script>
+  <script src="data/index.js"></script>
+  <script src="logic/index.js"></script>
 
   <!-- include spec files here... -->
-  <script src="logic.spec.js"></script>
+  <script src="logic/index.spec.js"></script>
 </head>
 
 <body>
