fix display error and add back link to duck details

--- a/staff/carolina-zhou/initial-app/index.html
+++ b/staff/carolina-zhou/initial-app/index.html
@@ -105,11 +105,12 @@
 
             <!-- Detail -->
             <section class="duck-detail hide">
-                <h3>Title</h3>
+                <h3 class="duck-detail__title">Title</h3>
                 <img class="duck-detail__photo" src="">
                 <span class="duck-detail__price">Price</span>
                 <p>Description</p>
-                <a class="duck-detail__link" href="">Link</a>
+                <a class="duck-detail__link" href="">Click here to see more!</a>
+                <a class="duck-detail__back" href="">...or go back to search results</a>
             </section>
         </section>
     </main>
