add register and login tests in es6 and es5 version with babel

--- a/staff/manuel-galvez/initial-app/duck-app/SpecRunner.html
+++ b/staff/manuel-galvez/initial-app/duck-app/SpecRunner.html
@@ -15,10 +15,10 @@
   <script src="utils/call.js"></script>
   <script src="utils/curray.js"></script>
   <script src="data/index.js"></script>
-  <script src="logic/index.js"></script>
+  <script src="logic/logic.js"></script>
 
   <!-- include spec files here... -->
-  <script src="logic/index.spec.js"></script>
+  <script src="logic/index.spec.es5.js"></script>
 </head>
 
 <body>
