--- a/staff/manuel-galvez/initial-app/duck-app/index.html
+++ b/staff/manuel-galvez/initial-app/duck-app/index.html
@@ -95,6 +95,7 @@
 		<script src="logic/logic.js"></script>
 		<script src="components/component.js"></script>
 		<script src="components/landing.js"></script>
+		<script src="components/feedback-attached.js"></script>
 		<script src="components/submit-back.js"></script>
 		<script src="components/register.js"></script>
 		<script src="components/login.js"></script>
